force-app/main/default/objects/Purchase_Order__c/Purchase_Order__c.object-meta.xml
<CustomObject>
    <label>Purchase Order</label>
    <nameField>
        <displayFormat>PO-{000000}</displayFormat>
        <label>Purchase Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>