force-app/main/default/objects/Purchase_Order__c/fields/Contract_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Contract_Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Deposit</label>
    <referenceTo>Contractdeposit__c</referenceTo>
    <relationshipLabel>Purchase Order</relationshipLabel>
    <relationshipName>Purchase_Order</relationshipName>
    <type>Lookup</type>
</CustomField>