force-app/main/default/objects/Purchase_Order__c/fields/Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract ID</label>
    <referenceTo>Purchase_contract__c</referenceTo>
    <relationshipLabel>Purchase Order</relationshipLabel>
    <relationshipName>Purchase_Order</relationshipName>
    <type>Lookup</type>
</CustomField>