force-app/main/default/objects/Purchase_Order__c/fields/Cost_Exchange_rate_CNY__c.field-meta.xml
<CustomField>
    <fullName>Cost_Exchange_rate_CNY__c</fullName>
    <label>Cost Exchange rate (CNY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>