force-app/main/default/objects/Purchase_Order__c/fields/Cost_in_T__c.field-meta.xml
<CustomField>
    <fullName>Cost_in_T__c</fullName>
    <label>Cost in Tệ</label>
    <summarizedField>Buying_Cost__c.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Buying_Cost__c.Currency__c</field>
        <operation>equals</operation>
        <value>Tệ</value>
    </summaryFilterItems>
    <summaryForeignKey>Buying_Cost__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>