force-app/main/default/objects/Purchase_Order__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <formula>Text (Contract_ID__r.Contract_Currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency</label>
    <type>Text</type>
</CustomField>