force-app/main/default/objects/Purchase_Order__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <label>Shipping is handled by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nhà cung cấp</fullName>
            </value>
            <value>
                <fullName>Tự vận chuyển</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>