force-app/main/default/objects/Purchase_Order__c/fields/Estimateddelivery__c.field-meta.xml
<CustomField>
    <fullName>Estimateddelivery__c</fullName>
    <inlineHelpText>Ngày dự kiến hàng sẽ giao tới kho</inlineHelpText>
    <label>Estimated delivery</label>
    <type>Date</type>
</CustomField>