force-app/main/default/objects/Purchase_Order__c/fields/Exchange_rate_VND__c.field-meta.xml
<CustomField>
    <fullName>Exchange_rate_VND__c</fullName>
    <label>Exchange rate (VND)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>