force-app/main/default/objects/Purchase_Order__c/fields/Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Order_Value__c</fullName>
    <label>Order Value</label>
    <summarizedField>PO_Product__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>PO_Product__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>