force-app/main/default/objects/Purchase_Order__c/fields/Price_Te__c.field-meta.xml
<CustomField>
    <fullName>Price_Te__c</fullName>
    <label>Price Tệ</label>
    <summarizedField>PO_Product__c.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>PO_Product__c.Currency__c</field>
        <operation>equals</operation>
        <value>Tệ</value>
    </summaryFilterItems>
    <summaryForeignKey>PO_Product__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>