force-app/main/default/objects/Purchase_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Đã tạo</fullName>
            </value>
            <value>
                <fullName>Đợi phê duyệt</fullName>
            </value>
            <value>
                <fullName>Đã được duyệt</fullName>
            </value>
            <value>
                <fullName>Chờ xác nhận</fullName>
            </value>
            <value>
                <fullName>Đã xác nhận</fullName>
            </value>
            <value>
                <fullName>Đang giao hàng</fullName>
            </value>
            <value>
                <fullName>Hoàn thành</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>