force-app/main/default/objects/Purchase_Order__c/fields/Total_Convert_to_CNY__c.field-meta.xml
<CustomField>
    <fullName>Total_Convert_to_CNY__c</fullName>
    <formula>pricevnd__c  /  Exchange_rate__c +  Price_Te__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Convert to CNY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>