force-app/main/default/objects/Purchase_Order__c/fields/Total_Convert_to_VN__c.field-meta.xml
<CustomField>
    <fullName>Total_Convert_to_VN__c</fullName>
    <formula>Price_Te__c * Exchange_rate_VND__c +  pricevnd__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Convert to VNĐ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>