force-app/main/default/objects/Purchase_Order__c/fields/Total_Cost_Convert_to_VND__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Convert_to_VND__c</fullName>
    <formula>Cost_in_T__c  *  Cost_Exchange_rate_VND__c +  Cost_in_VN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Convert to VNĐ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>