force-app/main/default/objects/Purchase_Order__c/fields/Total_Goods__c.field-meta.xml
<CustomField>
    <fullName>Total_Goods__c</fullName>
    <label>Total Goods</label>
    <summarizedField>PO_Product__c.Order_Quantity__c</summarizedField>
    <summaryForeignKey>PO_Product__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>