force-app/main/default/objects/Purchase_Order__c/fields/Total_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid__c</fullName>
    <label>Total Paid</label>
    <summarizedField>PO_Payment__c.Amount__c</summarizedField>
    <summaryForeignKey>PO_Payment__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>