force-app/main/default/objects/Purchase_Order__c/fields/Vender_PIC__c.field-meta.xml
<CustomField>
    <fullName>Vender_PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vender PIC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Order</relationshipLabel>
    <relationshipName>Purchase_Order</relationshipName>
    <type>Lookup</type>
</CustomField>