force-app/main/default/objects/Purchase_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Vendor__c</columns>
    <columns>Delivery__c</columns>
    <columns>Total_Goods__c</columns>
    <columns>Order_Value__c</columns>
    <columns>Currency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>